compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> display_instr
Rule 5     instruccion -> definicion_instr
Rule 6     instruccion -> asignacion_instr
Rule 7     instruccion -> under_instr
Rule 8     instruccion -> valid_instr
Rule 9     instruccion -> invalid_instr
Rule 10    instruccion -> repeat_instr
Rule 11    instruccion -> go_under_instr
Rule 12    display_instr -> DISPLAY PARIZQ expresion_cadena PARDER PTCOMA
Rule 13    tipo_dato -> NUMBER
Rule 14    tipo_dato -> TEXT
Rule 15    tipo_dato -> BINARY
Rule 16    definicion_instr -> tipo_dato ID PTCOMA
Rule 17    asignacion_instr -> ID IGUAL expresion_numerica PTCOMA
Rule 18    asignacion_instr -> ID IGUAL expresion_cadena PTCOMA
Rule 19    asignacion_instr -> ID IGUAL expresion_booleana PTCOMA
Rule 20    under_instr -> UNDER DUPOINT expresion_comparativa LLAVIZQ instrucciones LLAVDER
Rule 21    go_under_instr -> GO LLAVIZQ instrucciones LLAVDER UNDER expresion_comparativa PTCOMA
Rule 22    valid_instr -> VALID DUPOINT expresion_comparativa LLAVIZQ instrucciones LLAVDER
Rule 23    invalid_instr -> VALID DUPOINT expresion_comparativa LLAVIZQ instrucciones LLAVDER INVALID LLAVIZQ instrucciones LLAVDER
Rule 24    repeat_instr -> REPEAT DUPOINT ID PTCOMA expresion_comparativa IN expresion_numerica LLAVIZQ instrucciones LLAVDER
Rule 25    expresion_numerica -> expresion_numerica MAS expresion_numerica
Rule 26    expresion_numerica -> expresion_numerica MENOS expresion_numerica
Rule 27    expresion_numerica -> expresion_numerica POR expresion_numerica
Rule 28    expresion_numerica -> expresion_numerica DIVIDIDO expresion_numerica
Rule 29    expresion_numerica -> expresion_numerica MODULO expresion_numerica
Rule 30    expresion_numerica -> expresion_numerica POTENCIA expresion_numerica
Rule 31    expresion_numerica -> MENOS expresion_numerica
Rule 32    expresion_numerica -> PARIZQ expresion_numerica PARDER
Rule 33    expresion_numerica -> ENTERO
Rule 34    expresion_numerica -> DECIMAL
Rule 35    expresion_numerica -> ID
Rule 36    expresion_cadena -> expresion_cadena CONCAT expresion_cadena
Rule 37    expresion_cadena -> CADENA
Rule 38    expresion_cadena -> expresion_numerica
Rule 39    expresion_booleana -> TRUE
Rule 40    expresion_booleana -> FALSE
Rule 41    expresion_comparativa -> expresion_numerica MAYQUE expresion_numerica
Rule 42    expresion_comparativa -> expresion_numerica MENQUE expresion_numerica
Rule 43    expresion_comparativa -> expresion_numerica IGUALQUE expresion_numerica
Rule 44    expresion_comparativa -> expresion_numerica MAYIGU expresion_numerica
Rule 45    expresion_comparativa -> expresion_numerica MENIGU expresion_numerica
Rule 46    expresion_comparativa -> expresion_numerica NIGUALQUE expresion_numerica

Terminals, with rules where they appear

BINARY               : 15
CADENA               : 37
CONCAT               : 36
DECIMAL              : 34
DISPLAY              : 12
DIVIDIDO             : 28
DUPOINT              : 20 22 23 24
ENTERO               : 33
FALSE                : 40
GO                   : 21
ID                   : 16 17 18 19 24 35
IGUAL                : 17 18 19
IGUALQUE             : 43
IN                   : 24
INVALID              : 23
LLAVDER              : 20 21 22 23 23 24
LLAVIZQ              : 20 21 22 23 23 24
MAS                  : 25
MAYIGU               : 44
MAYQUE               : 41
MENIGU               : 45
MENOS                : 26 31
MENQUE               : 42
MODULO               : 29
NIGUALQUE            : 46
NUMBER               : 13
PARDER               : 12 32
PARIZQ               : 12 32
POR                  : 27
POTENCIA             : 30
PTCOMA               : 12 16 17 18 19 21 24
REPEAT               : 24
TEXT                 : 14
TRUE                 : 39
UNDER                : 20 21
VALID                : 22 23
error                : 

Nonterminals, with rules where they appear

asignacion_instr     : 6
definicion_instr     : 5
display_instr        : 4
expresion_booleana   : 19
expresion_cadena     : 12 18 36 36
expresion_comparativa : 20 21 22 23 24
expresion_numerica   : 17 24 25 25 26 26 27 27 28 28 29 29 30 30 31 32 38 41 41 42 42 43 43 44 44 45 45 46 46
go_under_instr       : 11
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2 20 21 22 23 23 24
invalid_instr        : 9
repeat_instr         : 10
tipo_dato            : 16
under_instr          : 7
valid_instr          : 8

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . display_instr
    (5) instruccion -> . definicion_instr
    (6) instruccion -> . asignacion_instr
    (7) instruccion -> . under_instr
    (8) instruccion -> . valid_instr
    (9) instruccion -> . invalid_instr
    (10) instruccion -> . repeat_instr
    (11) instruccion -> . go_under_instr
    (12) display_instr -> . DISPLAY PARIZQ expresion_cadena PARDER PTCOMA
    (16) definicion_instr -> . tipo_dato ID PTCOMA
    (17) asignacion_instr -> . ID IGUAL expresion_numerica PTCOMA
    (18) asignacion_instr -> . ID IGUAL expresion_cadena PTCOMA
    (19) asignacion_instr -> . ID IGUAL expresion_booleana PTCOMA
    (20) under_instr -> . UNDER DUPOINT expresion_comparativa LLAVIZQ instrucciones LLAVDER
    (22) valid_instr -> . VALID DUPOINT expresion_comparativa LLAVIZQ instrucciones LLAVDER
    (23) invalid_instr -> . VALID DUPOINT expresion_comparativa LLAVIZQ instrucciones LLAVDER INVALID LLAVIZQ instrucciones LLAVDER
    (24) repeat_instr -> . REPEAT DUPOINT ID PTCOMA expresion_comparativa IN expresion_numerica LLAVIZQ instrucciones LLAVDER
    (21) go_under_instr -> . GO LLAVIZQ instrucciones LLAVDER UNDER expresion_comparativa PTCOMA
    (13) tipo_dato -> . NUMBER
    (14) tipo_dato -> . TEXT
    (15) tipo_dato -> . BINARY

    DISPLAY         shift and go to state 12
    ID              shift and go to state 14
    UNDER           shift and go to state 15
    VALID           shift and go to state 16
    REPEAT          shift and go to state 17
    GO              shift and go to state 18
    NUMBER          shift and go to state 19
    TEXT            shift and go to state 20
    BINARY          shift and go to state 21

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    display_instr                  shift and go to state 4
    definicion_instr               shift and go to state 5
    asignacion_instr               shift and go to state 6
    under_instr                    shift and go to state 7
    valid_instr                    shift and go to state 8
    invalid_instr                  shift and go to state 9
    repeat_instr                   shift and go to state 10
    go_under_instr                 shift and go to state 11
    tipo_dato                      shift and go to state 13

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . display_instr
    (5) instruccion -> . definicion_instr
    (6) instruccion -> . asignacion_instr
    (7) instruccion -> . under_instr
    (8) instruccion -> . valid_instr
    (9) instruccion -> . invalid_instr
    (10) instruccion -> . repeat_instr
    (11) instruccion -> . go_under_instr
    (12) display_instr -> . DISPLAY PARIZQ expresion_cadena PARDER PTCOMA
    (16) definicion_instr -> . tipo_dato ID PTCOMA
    (17) asignacion_instr -> . ID IGUAL expresion_numerica PTCOMA
    (18) asignacion_instr -> . ID IGUAL expresion_cadena PTCOMA
    (19) asignacion_instr -> . ID IGUAL expresion_booleana PTCOMA
    (20) under_instr -> . UNDER DUPOINT expresion_comparativa LLAVIZQ instrucciones LLAVDER
    (22) valid_instr -> . VALID DUPOINT expresion_comparativa LLAVIZQ instrucciones LLAVDER
    (23) invalid_instr -> . VALID DUPOINT expresion_comparativa LLAVIZQ instrucciones LLAVDER INVALID LLAVIZQ instrucciones LLAVDER
    (24) repeat_instr -> . REPEAT DUPOINT ID PTCOMA expresion_comparativa IN expresion_numerica LLAVIZQ instrucciones LLAVDER
    (21) go_under_instr -> . GO LLAVIZQ instrucciones LLAVDER UNDER expresion_comparativa PTCOMA
    (13) tipo_dato -> . NUMBER
    (14) tipo_dato -> . TEXT
    (15) tipo_dato -> . BINARY

    $end            reduce using rule 1 (init -> instrucciones .)
    DISPLAY         shift and go to state 12
    ID              shift and go to state 14
    UNDER           shift and go to state 15
    VALID           shift and go to state 16
    REPEAT          shift and go to state 17
    GO              shift and go to state 18
    NUMBER          shift and go to state 19
    TEXT            shift and go to state 20
    BINARY          shift and go to state 21

    instruccion                    shift and go to state 22
    display_instr                  shift and go to state 4
    definicion_instr               shift and go to state 5
    asignacion_instr               shift and go to state 6
    under_instr                    shift and go to state 7
    valid_instr                    shift and go to state 8
    invalid_instr                  shift and go to state 9
    repeat_instr                   shift and go to state 10
    go_under_instr                 shift and go to state 11
    tipo_dato                      shift and go to state 13

state 3

    (3) instrucciones -> instruccion .

    DISPLAY         reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    UNDER           reduce using rule 3 (instrucciones -> instruccion .)
    VALID           reduce using rule 3 (instrucciones -> instruccion .)
    REPEAT          reduce using rule 3 (instrucciones -> instruccion .)
    GO              reduce using rule 3 (instrucciones -> instruccion .)
    NUMBER          reduce using rule 3 (instrucciones -> instruccion .)
    TEXT            reduce using rule 3 (instrucciones -> instruccion .)
    BINARY          reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    LLAVDER         reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> display_instr .

    DISPLAY         reduce using rule 4 (instruccion -> display_instr .)
    ID              reduce using rule 4 (instruccion -> display_instr .)
    UNDER           reduce using rule 4 (instruccion -> display_instr .)
    VALID           reduce using rule 4 (instruccion -> display_instr .)
    REPEAT          reduce using rule 4 (instruccion -> display_instr .)
    GO              reduce using rule 4 (instruccion -> display_instr .)
    NUMBER          reduce using rule 4 (instruccion -> display_instr .)
    TEXT            reduce using rule 4 (instruccion -> display_instr .)
    BINARY          reduce using rule 4 (instruccion -> display_instr .)
    $end            reduce using rule 4 (instruccion -> display_instr .)
    LLAVDER         reduce using rule 4 (instruccion -> display_instr .)


state 5

    (5) instruccion -> definicion_instr .

    DISPLAY         reduce using rule 5 (instruccion -> definicion_instr .)
    ID              reduce using rule 5 (instruccion -> definicion_instr .)
    UNDER           reduce using rule 5 (instruccion -> definicion_instr .)
    VALID           reduce using rule 5 (instruccion -> definicion_instr .)
    REPEAT          reduce using rule 5 (instruccion -> definicion_instr .)
    GO              reduce using rule 5 (instruccion -> definicion_instr .)
    NUMBER          reduce using rule 5 (instruccion -> definicion_instr .)
    TEXT            reduce using rule 5 (instruccion -> definicion_instr .)
    BINARY          reduce using rule 5 (instruccion -> definicion_instr .)
    $end            reduce using rule 5 (instruccion -> definicion_instr .)
    LLAVDER         reduce using rule 5 (instruccion -> definicion_instr .)


state 6

    (6) instruccion -> asignacion_instr .

    DISPLAY         reduce using rule 6 (instruccion -> asignacion_instr .)
    ID              reduce using rule 6 (instruccion -> asignacion_instr .)
    UNDER           reduce using rule 6 (instruccion -> asignacion_instr .)
    VALID           reduce using rule 6 (instruccion -> asignacion_instr .)
    REPEAT          reduce using rule 6 (instruccion -> asignacion_instr .)
    GO              reduce using rule 6 (instruccion -> asignacion_instr .)
    NUMBER          reduce using rule 6 (instruccion -> asignacion_instr .)
    TEXT            reduce using rule 6 (instruccion -> asignacion_instr .)
    BINARY          reduce using rule 6 (instruccion -> asignacion_instr .)
    $end            reduce using rule 6 (instruccion -> asignacion_instr .)
    LLAVDER         reduce using rule 6 (instruccion -> asignacion_instr .)


state 7

    (7) instruccion -> under_instr .

    DISPLAY         reduce using rule 7 (instruccion -> under_instr .)
    ID              reduce using rule 7 (instruccion -> under_instr .)
    UNDER           reduce using rule 7 (instruccion -> under_instr .)
    VALID           reduce using rule 7 (instruccion -> under_instr .)
    REPEAT          reduce using rule 7 (instruccion -> under_instr .)
    GO              reduce using rule 7 (instruccion -> under_instr .)
    NUMBER          reduce using rule 7 (instruccion -> under_instr .)
    TEXT            reduce using rule 7 (instruccion -> under_instr .)
    BINARY          reduce using rule 7 (instruccion -> under_instr .)
    $end            reduce using rule 7 (instruccion -> under_instr .)
    LLAVDER         reduce using rule 7 (instruccion -> under_instr .)


state 8

    (8) instruccion -> valid_instr .

    DISPLAY         reduce using rule 8 (instruccion -> valid_instr .)
    ID              reduce using rule 8 (instruccion -> valid_instr .)
    UNDER           reduce using rule 8 (instruccion -> valid_instr .)
    VALID           reduce using rule 8 (instruccion -> valid_instr .)
    REPEAT          reduce using rule 8 (instruccion -> valid_instr .)
    GO              reduce using rule 8 (instruccion -> valid_instr .)
    NUMBER          reduce using rule 8 (instruccion -> valid_instr .)
    TEXT            reduce using rule 8 (instruccion -> valid_instr .)
    BINARY          reduce using rule 8 (instruccion -> valid_instr .)
    $end            reduce using rule 8 (instruccion -> valid_instr .)
    LLAVDER         reduce using rule 8 (instruccion -> valid_instr .)


state 9

    (9) instruccion -> invalid_instr .

    DISPLAY         reduce using rule 9 (instruccion -> invalid_instr .)
    ID              reduce using rule 9 (instruccion -> invalid_instr .)
    UNDER           reduce using rule 9 (instruccion -> invalid_instr .)
    VALID           reduce using rule 9 (instruccion -> invalid_instr .)
    REPEAT          reduce using rule 9 (instruccion -> invalid_instr .)
    GO              reduce using rule 9 (instruccion -> invalid_instr .)
    NUMBER          reduce using rule 9 (instruccion -> invalid_instr .)
    TEXT            reduce using rule 9 (instruccion -> invalid_instr .)
    BINARY          reduce using rule 9 (instruccion -> invalid_instr .)
    $end            reduce using rule 9 (instruccion -> invalid_instr .)
    LLAVDER         reduce using rule 9 (instruccion -> invalid_instr .)


state 10

    (10) instruccion -> repeat_instr .

    DISPLAY         reduce using rule 10 (instruccion -> repeat_instr .)
    ID              reduce using rule 10 (instruccion -> repeat_instr .)
    UNDER           reduce using rule 10 (instruccion -> repeat_instr .)
    VALID           reduce using rule 10 (instruccion -> repeat_instr .)
    REPEAT          reduce using rule 10 (instruccion -> repeat_instr .)
    GO              reduce using rule 10 (instruccion -> repeat_instr .)
    NUMBER          reduce using rule 10 (instruccion -> repeat_instr .)
    TEXT            reduce using rule 10 (instruccion -> repeat_instr .)
    BINARY          reduce using rule 10 (instruccion -> repeat_instr .)
    $end            reduce using rule 10 (instruccion -> repeat_instr .)
    LLAVDER         reduce using rule 10 (instruccion -> repeat_instr .)


state 11

    (11) instruccion -> go_under_instr .

    DISPLAY         reduce using rule 11 (instruccion -> go_under_instr .)
    ID              reduce using rule 11 (instruccion -> go_under_instr .)
    UNDER           reduce using rule 11 (instruccion -> go_under_instr .)
    VALID           reduce using rule 11 (instruccion -> go_under_instr .)
    REPEAT          reduce using rule 11 (instruccion -> go_under_instr .)
    GO              reduce using rule 11 (instruccion -> go_under_instr .)
    NUMBER          reduce using rule 11 (instruccion -> go_under_instr .)
    TEXT            reduce using rule 11 (instruccion -> go_under_instr .)
    BINARY          reduce using rule 11 (instruccion -> go_under_instr .)
    $end            reduce using rule 11 (instruccion -> go_under_instr .)
    LLAVDER         reduce using rule 11 (instruccion -> go_under_instr .)


state 12

    (12) display_instr -> DISPLAY . PARIZQ expresion_cadena PARDER PTCOMA

    PARIZQ          shift and go to state 23


state 13

    (16) definicion_instr -> tipo_dato . ID PTCOMA

    ID              shift and go to state 24


state 14

    (17) asignacion_instr -> ID . IGUAL expresion_numerica PTCOMA
    (18) asignacion_instr -> ID . IGUAL expresion_cadena PTCOMA
    (19) asignacion_instr -> ID . IGUAL expresion_booleana PTCOMA

    IGUAL           shift and go to state 25


state 15

    (20) under_instr -> UNDER . DUPOINT expresion_comparativa LLAVIZQ instrucciones LLAVDER

    DUPOINT         shift and go to state 26


state 16

    (22) valid_instr -> VALID . DUPOINT expresion_comparativa LLAVIZQ instrucciones LLAVDER
    (23) invalid_instr -> VALID . DUPOINT expresion_comparativa LLAVIZQ instrucciones LLAVDER INVALID LLAVIZQ instrucciones LLAVDER

    DUPOINT         shift and go to state 27


state 17

    (24) repeat_instr -> REPEAT . DUPOINT ID PTCOMA expresion_comparativa IN expresion_numerica LLAVIZQ instrucciones LLAVDER

    DUPOINT         shift and go to state 28


state 18

    (21) go_under_instr -> GO . LLAVIZQ instrucciones LLAVDER UNDER expresion_comparativa PTCOMA

    LLAVIZQ         shift and go to state 29


state 19

    (13) tipo_dato -> NUMBER .

    ID              reduce using rule 13 (tipo_dato -> NUMBER .)


state 20

    (14) tipo_dato -> TEXT .

    ID              reduce using rule 14 (tipo_dato -> TEXT .)


state 21

    (15) tipo_dato -> BINARY .

    ID              reduce using rule 15 (tipo_dato -> BINARY .)


state 22

    (2) instrucciones -> instrucciones instruccion .

    DISPLAY         reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    ID              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    UNDER           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    VALID           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    REPEAT          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    GO              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    NUMBER          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    TEXT            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    BINARY          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    LLAVDER         reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 23

    (12) display_instr -> DISPLAY PARIZQ . expresion_cadena PARDER PTCOMA
    (36) expresion_cadena -> . expresion_cadena CONCAT expresion_cadena
    (37) expresion_cadena -> . CADENA
    (38) expresion_cadena -> . expresion_numerica
    (25) expresion_numerica -> . expresion_numerica MAS expresion_numerica
    (26) expresion_numerica -> . expresion_numerica MENOS expresion_numerica
    (27) expresion_numerica -> . expresion_numerica POR expresion_numerica
    (28) expresion_numerica -> . expresion_numerica DIVIDIDO expresion_numerica
    (29) expresion_numerica -> . expresion_numerica MODULO expresion_numerica
    (30) expresion_numerica -> . expresion_numerica POTENCIA expresion_numerica
    (31) expresion_numerica -> . MENOS expresion_numerica
    (32) expresion_numerica -> . PARIZQ expresion_numerica PARDER
    (33) expresion_numerica -> . ENTERO
    (34) expresion_numerica -> . DECIMAL
    (35) expresion_numerica -> . ID

    CADENA          shift and go to state 32
    MENOS           shift and go to state 34
    PARIZQ          shift and go to state 30
    ENTERO          shift and go to state 35
    DECIMAL         shift and go to state 36
    ID              shift and go to state 37

    expresion_cadena               shift and go to state 31
    expresion_numerica             shift and go to state 33

state 24

    (16) definicion_instr -> tipo_dato ID . PTCOMA

    PTCOMA          shift and go to state 38


state 25

    (17) asignacion_instr -> ID IGUAL . expresion_numerica PTCOMA
    (18) asignacion_instr -> ID IGUAL . expresion_cadena PTCOMA
    (19) asignacion_instr -> ID IGUAL . expresion_booleana PTCOMA
    (25) expresion_numerica -> . expresion_numerica MAS expresion_numerica
    (26) expresion_numerica -> . expresion_numerica MENOS expresion_numerica
    (27) expresion_numerica -> . expresion_numerica POR expresion_numerica
    (28) expresion_numerica -> . expresion_numerica DIVIDIDO expresion_numerica
    (29) expresion_numerica -> . expresion_numerica MODULO expresion_numerica
    (30) expresion_numerica -> . expresion_numerica POTENCIA expresion_numerica
    (31) expresion_numerica -> . MENOS expresion_numerica
    (32) expresion_numerica -> . PARIZQ expresion_numerica PARDER
    (33) expresion_numerica -> . ENTERO
    (34) expresion_numerica -> . DECIMAL
    (35) expresion_numerica -> . ID
    (36) expresion_cadena -> . expresion_cadena CONCAT expresion_cadena
    (37) expresion_cadena -> . CADENA
    (38) expresion_cadena -> . expresion_numerica
    (39) expresion_booleana -> . TRUE
    (40) expresion_booleana -> . FALSE

    MENOS           shift and go to state 34
    PARIZQ          shift and go to state 30
    ENTERO          shift and go to state 35
    DECIMAL         shift and go to state 36
    ID              shift and go to state 37
    CADENA          shift and go to state 32
    TRUE            shift and go to state 42
    FALSE           shift and go to state 43

    expresion_numerica             shift and go to state 39
    expresion_cadena               shift and go to state 40
    expresion_booleana             shift and go to state 41

state 26

    (20) under_instr -> UNDER DUPOINT . expresion_comparativa LLAVIZQ instrucciones LLAVDER
    (41) expresion_comparativa -> . expresion_numerica MAYQUE expresion_numerica
    (42) expresion_comparativa -> . expresion_numerica MENQUE expresion_numerica
    (43) expresion_comparativa -> . expresion_numerica IGUALQUE expresion_numerica
    (44) expresion_comparativa -> . expresion_numerica MAYIGU expresion_numerica
    (45) expresion_comparativa -> . expresion_numerica MENIGU expresion_numerica
    (46) expresion_comparativa -> . expresion_numerica NIGUALQUE expresion_numerica
    (25) expresion_numerica -> . expresion_numerica MAS expresion_numerica
    (26) expresion_numerica -> . expresion_numerica MENOS expresion_numerica
    (27) expresion_numerica -> . expresion_numerica POR expresion_numerica
    (28) expresion_numerica -> . expresion_numerica DIVIDIDO expresion_numerica
    (29) expresion_numerica -> . expresion_numerica MODULO expresion_numerica
    (30) expresion_numerica -> . expresion_numerica POTENCIA expresion_numerica
    (31) expresion_numerica -> . MENOS expresion_numerica
    (32) expresion_numerica -> . PARIZQ expresion_numerica PARDER
    (33) expresion_numerica -> . ENTERO
    (34) expresion_numerica -> . DECIMAL
    (35) expresion_numerica -> . ID

